# diameter

./: .gitignore  404.html  CEA_TIMEOUT_TROUBLESHOOTING.md  CER_CEA_MANX_GUIDE.md  CNAME  DIAMETER_CLIENT_GUIDE.md  ERROR_RESOLUTION_SUMMARY.md  GET_STARTED_NOW.md  ISSUES_AND_FIXES.md  LICENSE  MANX_QUICKSTART.py  QUICK_START.md  README.md  README_DOCUMENTATION.md  generate_avp_dictionary.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  test_connection.py
api/: index.html
docs/: index.md  setup.md
examples/: cer_cea.py  credit_control_sms_client.py  diagnose_connection.py  diameter_fqdn_nld_client.py  diameter_test_client.py  gy_live_client_fqdn.py  idle_client.py  idle_client_corrected.py  idle_server.py  nlb_client.py  nlb_client_manx.py  test_client_debug.py
guide/: index.html
message/: __init__.py  _base.py  constants.py
mtnsa_testcases/: check_capabilities_exchange_between_client_and_mtnserver.py  data_international_roaming.py  data_international_with_imei.py  data_on-net.py  run_tesr2.py  run_test.py
my_task/: binary_hex_convertion.py  check_capabilities_exchange_between_client_and_server.py  data_session_start.py  data_session_termination.py  data_usage_update.py  invalid_rattype_apn.py  long_running_data_session.py  missing_subscription_id.py  send_and_receive_ccr_i_ccr_u_ccr_t.py  send_and_terminate_ccr_when_data_exhausted.py  send_data_ccr.py  unsupported_services.py
overrides/: main.html
search/: search_index.json
setup/: index.html
tests/: test_aa_mobile_node.py  test_abort_session.py  test_accounting.py  test_accounting_rf.py  test_annotations.py  test_authentication_information.py  test_avp.py  test_avp_enumerated.py  test_cancel_location.py  test_cancel_vcsg_location.py  test_capabilities_exchange.py  test_credit_contol_service_generic.py  test_credit_control.py  test_credit_control_aoc.py  test_credit_control_cpdt.py  test_credit_control_dcd.py  test_credit_control_im.py  test_message.py  (+37 more)
(+180 files in other folders)
