[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "diameter"
description = "A diameter stack implemented in python"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.11"
authors = [
    {name = "Mikko Mensonen"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Telephony"
]
dynamic = ["version"]

[tool.setuptools_scm]
