[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python-diameter"
description = "A diameter stack implemented in python"
readme = "README.md"
license = {"text" = "MIT License"}
requires-python = ">= 3.11"
authors = [
    {name = "Mikko Mensonen"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Telephony"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://mensonen.github.io/diameter/"
Repository = "https://github.com/mensonen/diameter"

[tool.setuptools_scm]
